Basic page layout Added support for toggling and persisting theme.

--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,19 +1,29 @@
+<ion-toolbar>
+  <ion-title>Cody Reibsome</ion-title>
+  <ion-buttons slot="end">
+    <ion-button *ngIf="darkMode" (click)="toggleTheme()">
+      <ion-icon slot="icon-only" name="moon"></ion-icon>
+    </ion-button>
+    <ion-button *ngIf="!darkMode" (click)="toggleTheme()">
+      <ion-icon slot="icon-only" name="sunny"></ion-icon>
+    </ion-button>
+  </ion-buttons>
+</ion-toolbar>
 <ion-tabs>
-
   <ion-tab-bar slot="bottom">
-    <ion-tab-button tab="tab1">
-      <ion-icon name="triangle"></ion-icon>
-      <ion-label>Tab 1</ion-label>
+    <ion-tab-button tab="about">
+      <ion-icon name="happy"></ion-icon>
+      <ion-label>About</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab2">
-      <ion-icon name="ellipse"></ion-icon>
-      <ion-label>Tab 2</ion-label>
+    <ion-tab-button tab="experience">
+      <ion-icon name="briefcase"></ion-icon>
+      <ion-label>Experience</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab3">
-      <ion-icon name="square"></ion-icon>
-      <ion-label>Tab 3</ion-label>
+    <ion-tab-button tab="contact">
+      <ion-icon name="paper-plane"></ion-icon>
+      <ion-label>Contact</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 
