--- a/src/app/about/about.page.html
+++ b/src/app/about/about.page.html
@@ -1,9 +1,14 @@
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 1</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content>
+  <div id="banner">
+  </div>
 
-  <app-explore-container name="Tab 1 page"></app-explore-container>
+  <div id="container">
+    <h1>{{config.name}}</h1>
+
+    <ion-text>
+      <h4 *ngFor="let item of config.titles;">{{item}}</h4>
+
+      <p *ngFor="let item of config.aboutContent;">{{item}}</p>
+    </ion-text>
+  </div>
 </ion-content>
