--- a/src/app/contact/contact.page.html
+++ b/src/app/contact/contact.page.html
@@ -1,9 +1,21 @@
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 3</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content>
+  <div id="container">
+    <ion-text color="primary">
+      <h1>Want to connect?</h1>
+    </ion-text>
 
-  <app-explore-container name="Tab 3 page"></app-explore-container>
+    <ion-grid>
+      <ion-row>
+        <ion-col size="4">
+          <a [href]="'mailto:' + config.email"><ion-icon size="large" name="mail"></ion-icon></a>
+        </ion-col>
+        <ion-col size="4">
+          <a [href]="config.linkedin"><ion-icon size="large" name="logo-linkedin"></ion-icon></a>
+        </ion-col>
+        <ion-col size="4">
+          <a [href]="config.github"><ion-icon size="large" name="logo-github"></ion-icon></a>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </div>
 </ion-content>
